microfrontend chart inicial

--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,9 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "none",
+              "optimization": true,
+              "sourceMap": false
             },
             "development": {
               "optimization": false,
