correção de config vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "name": "mfe-chart",
   "version": 2,
-  "buildCommand": "npm run build:mfe",
+  "buildCommand": "npx ng build --configuration=production --output-hashing=none",
   "outputDirectory": "dist/mfe-chart/browser",
   "devCommand": "npm start",
   "installCommand": "npm install",
