fix: usa configuracao padrao da vercel para angular

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "./vercel-build.sh",
-  "outputDirectory": "dist/mfe-chart/browser",
+  "buildCommand": "ng build --configuration=production",
+  "outputDirectory": "dist/mfe-chart",
   "installCommand": "npm install"
 }
